--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "vite": "^6.2.1"
   }
