--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
